feat: add contacts endpoint
