# docs/swagger.yaml
@@ -104,6 +104,25 @@ definitions:
       updated_at:
         type: integer
     type: object
+  contact_dto.Contact:
+    properties:
+      description:
+        type: string
+      email:
+        type: string
+      github:
+        type: string
+      linkedin:
+        type: string
+      name:
+        type: string
+      scanned_at:
+        type: integer
+      user_id:
+        type: string
+      web:
+        type: string
+    type: object
   sqlc.Album:
     properties:
       createdAt:
@@ -339,6 +358,22 @@ paths:
             $ref: '#/definitions/card_model.Card'
       tags:
       - Card
+  /api/v1/contact:
+    get:
+      consumes:
+      - application/json
+      description: List contacts of the current user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/contact_dto.Contact'
+            type: array
+      tags:
+      - Contact
   /api/v1/user/{id}:
     put:
       consumes:
